--- a/tp1_escape_pokemon/.vscode/tasks.json
+++ b/tp1_escape_pokemon/.vscode/tasks.json
@@ -8,7 +8,12 @@
 			"args": [
 				"-fdiagnostics-color=always",
 				"-g",
+				"-std=c99",
 				"-Wall",
+				"-Wconversion",
+				"-Wtype",
+				"-limits",
+				"-Werror",
 				"${file}",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}"
@@ -23,19 +28,6 @@
 				"kind": "build",
 				"isDefault": true
 			},
-			"detail": "compiler: /usr/bin/gcc"
-		},
-		{
-			"type": "shell",
-			"label": "Escape Pokemón",
-			"command": "/usr/bin/gcc -fdiagnostics-color=always -g -O0 -std=c99 -Wall -Wconversion -Wtype-limits -Werror ${file} -o ${fileDirname}/${fileBasenameNoExtension} &&${fileDirname}/${fileBasenameNoExtension}",
-		
-			"options": {
-				"cwd": "${fileDirname}"
-			},
-			"problemMatcher": [
-				"$gcc"
-			],
 			"detail": "compiler: /usr/bin/gcc"
 		}
 	]
