--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -28,8 +28,7 @@
 		{
 			"type": "shell",
 			"label": "Escape Pokemón",
-			"command": "/usr/bin/gcc -fdiagnostics-color=always -g -O0 -std=c99 -Wall -Wconversion -Wtype-limits -Werror ${file} -o ${fileDirname}/${fileBasenameNoExtension} &&${fileDirname}/${fileBasenameNoExtension}",
-		
+			"command": "/usr/bin/gcc -fdiagnostics-color=always -g -O0 -std=c99 -Wall -Wconversion -Wtype-limits -Werror ${file} -o ${fileDirname}/${fileBasenameNoExtension} &&${fileDirname}/${fileBasenameNoExtension} ejemplo/objetos.txt ejemplo/interacciones.txt",
 			"options": {
 				"cwd": "${fileDirname}"
 			},
