Desarrollar una funcion que lea el archivo objetos

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
         "files.associations": {
                 "stdio.h": "c",
-                "sala.h": "c"
+                "sala.h": "c",
+                "estructuras.h": "c"
         }
 }
