Funciona bien, chupenme todos la pija

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -29,6 +29,7 @@
                                 "-fdiagnostics-color=always",
                                 "-g",
                                 "${file}",
+                                "src/*.c",
                                 "-o",
                                 "${fileDirname}/${fileBasenameNoExtension}"
                         ],
