--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
                 "stdio.h": "c",
                 "sala.h": "c",
                 "estructuras.h": "c"
-        }
+        },
+        "C_Cpp.errorSquiggles": "Enabled"
 }
