--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,6 +30,12 @@
                                 "-g",
                                 "${file}",
                                 "src/*.c",
+                                "-O0",
+                                "-std=c99",
+                                "-Wall",
+                                "-Wconversion",
+                                "-Wtype-limits",
+                                "-Werror",
                                 "-o",
                                 "${fileDirname}/${fileBasenameNoExtension}"
                         ],
