--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,5 @@
                 "estructuras.h": "c",
                 "objeto.h": "c"
         },
-        "C_Cpp.errorSquiggles": "Enabled"
+        "C_Cpp.errorSquiggles": "Disabled"
 }
