Eliminar el codigo de validacion obj e int Resulta que lo que estaba haciendo ya se podia hacer directo con sscanf que tonto fuiii

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,8 @@
                 "stdio.h": "c",
                 "sala.h": "c",
                 "estructuras.h": "c",
-                "objeto.h": "c"
+                "objeto.h": "c",
+                "stdbool.h": "c"
         },
         "C_Cpp.errorSquiggles": "Disabled"
 }
