--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,7 @@
                 "sala.h": "c",
                 "estructuras.h": "c",
                 "objeto.h": "c",
-                "stdbool.h": "c",
-                "stddef.h": "c"
+                "stdbool.h": "c"
         },
         "C_Cpp.errorSquiggles": "Disabled"
 }
