--- a/tda_1/.obsidian/app.json
+++ b/tda_1/.obsidian/app.json
@@ -1,10 +1,22 @@
 {
   "legacyEditor": false,
-  "livePreview": true,
+  "livePreview": false,
   "pdfExportSettings": {
     "pageSize": "Letter",
     "landscape": false,
     "margin": "0",
     "downscalePercent": 100
-  }
+  },
+  "spellcheckDictionary": [
+    "TDA",
+    "desapilarse",
+    "realloc",
+    "desapilar",
+    "sutracción",
+    "modularicé",
+    "modularizarlo",
+    "tamanio",
+    "struct",
+    "Iteradores"
+  ]
 }
