--- a/tda_1/.obsidian/workspace
+++ b/tda_1/.obsidian/workspace
@@ -11,7 +11,7 @@
           "state": {
             "file": "informe_tda1.md",
             "mode": "source",
-            "source": false
+            "source": true
           }
         }
       }
