Revert "Arreglar destruir_todo"
This reverts commit 4c73e1bd80a9d7d240511cf5a9498611ca6b437f.

--- a/tda_1/.obsidian/workspace
+++ b/tda_1/.obsidian/workspace
@@ -11,7 +11,7 @@
           "state": {
             "file": "informe_tda1.md",
             "mode": "source",
-            "source": true
+            "source": false
           }
         }
       }
