--- a/tda_1/.obsidian/app.json
+++ b/tda_1/.obsidian/app.json
@@ -1,22 +1,10 @@
 {
   "legacyEditor": false,
-  "livePreview": false,
+  "livePreview": true,
   "pdfExportSettings": {
     "pageSize": "Letter",
     "landscape": false,
     "margin": "0",
     "downscalePercent": 100
-  },
-  "spellcheckDictionary": [
-    "TDA",
-    "desapilarse",
-    "realloc",
-    "desapilar",
-    "sutracción",
-    "modularicé",
-    "modularizarlo",
-    "tamanio",
-    "struct",
-    "Iteradores"
-  ]
+  }
 }
