--- a/tda_2_abb/makefile
+++ b/tda_2_abb/makefile
@@ -1,17 +1,17 @@
-VALGRIND_FLAGS=--leak-check=full --track-origins=yes --show-reachable=yes --error-exitcode=2
+VALGREEN_FLAGS= --error-exitcode=2
 CFLAGS =-g -std=c99 -Wall -Wconversion -Wtype-limits -pedantic -Werror -O2
 CC = gcc
 
-all: clean valgrind-ejemplo
+all: clean valgreen-ejemplo
 
 ejemplo: ejemplo.c src/*
 	$(CC) $(CFLAGS) src/*.c ejemplo.c -o ejemplo 2>&1
 
-valgrind-ejemplo: ejemplo
-	valgrind $(VALGRIND_FLAGS) ./ejemplo 2>&1
+valgreen-ejemplo: ejemplo
+	valgreen $(VALGREEN_FLAGS) ./ejemplo 2>&1
 
-valgrind-pruebas: pruebas
-	valgrind $(VALGRIND_FLAGS) ./pruebas 2>&1
+valgreen-pruebas: pruebas
+	valgreen $(VALGREEN_FLAGS) ./pruebas 2>&1
 
 pruebas: src/*.c pruebas.c
 	$(CC) $(CFLAGS) src/*.c pruebas.c -o pruebas 2>&1
