--- a/tda_2_abb/makefile
+++ b/tda_2_abb/makefile
@@ -1,8 +1,9 @@
 VALGREEN_FLAGS= --error-exitcode=2 -s
+VALGRIND_FLAGS=--leak-check=full --track-origins=yes --show-reachable=yes --error-exitcode=2
 CFLAGS =-g -std=c99 -Wall -Wconversion -Wtype-limits -pedantic -Werror -O2
 CC = gcc
 
-all: clean valgreen-ejemplo
+all: clean valgreen-ejemplo, clean valgrind-ejemplo
 
 ejemplo: ejemplo.c src/*
 	$(CC) $(CFLAGS) src/*.c ejemplo.c -o ejemplo 2>&1
@@ -10,8 +11,14 @@ ejemplo: ejemplo.c src/*
 valgreen-ejemplo: ejemplo
 	valgreen $(VALGREEN_FLAGS) ./ejemplo 2>&1
 
+valgrind-ejemplo: ejemplo
+	valgrind $(VALGRIND_FLAGS) ./ejemplo 2>&1
+
 valgreen-pruebas: pruebas
 	valgreen $(VALGREEN_FLAGS) ./pruebas 2>&1
+	
+valgrind-pruebas: pruebas
+	valgrind $(VALGRIND_FLAGS) ./pruebas 2>&1
 
 pruebas: src/*.c pruebas.c
 	$(CC) $(CFLAGS) src/*.c pruebas.c -o pruebas 2>&1
