--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -49,7 +49,8 @@
                 "ostream": "cpp",
                 "stdexcept": "cpp",
                 "streambuf": "cpp",
-                "typeinfo": "cpp"
+                "typeinfo": "cpp",
+                "abb.h": "c"
         },
         "C_Cpp.errorSquiggles": "Disabled"
 }
