--- a/tda_2_abb/makefile
+++ b/tda_2_abb/makefile
@@ -1,5 +1,5 @@
 VALGREEN_FLAGS= --error-exitcode=2 -s
-VALGRIND_FLAGS=--leak-check=full --track-origins=yes --show-reachable=yes --error-exitcode=2
+VALGRIND_FLAGS=--leak-check=full --track-origins=yes --show-reachable=yes --error-exitcode=2 -s
 CFLAGS =-g -std=c99 -Wall -Wconversion -Wtype-limits -pedantic -Werror -O2
 CC = gcc
 
@@ -23,6 +23,15 @@ valgrind-pruebas: pruebas
 
 pruebas: src/*.c pruebas.c
 	$(CC) $(CFLAGS) src/*.c pruebas.c -o pruebas 2>&1
+
+valgrind-interactivo: interactivo
+	valgrind $(VALGREEN_FLAGS) ./interactivo
+
+valgreen-interactivo: interactivo
+	valgreen $(VALGRIND_FLAGS) ./interactivo
+
+interactivo: *.c *.h
+	$(CC) $(CFLAGS) src/abb.c mostrar_abb.c interactivo.c -o interactivo 2>&1
 
 clean:
 	rm -f ejemplo *.o pruebas 2>&1
