--- a/tda1_lista/makefile
+++ b/tda1_lista/makefile
@@ -1,5 +1,5 @@
 VALGRIND_FLAGS=--leak-check=full --track-origins=yes --show-reachable=yes --error-exitcode=2 --show-leak-kinds=all --trace-children=yes
-CFLAGS =-g -std=c99 -Wall -Wconversion -Wtype-limits -pedantic -Werror -O2
+CFLAGS =-g -std=c99 -Wall -Wconversion -Wtype-limits -pedantic -Werror -O2 -n
 CC = gcc
 
 all: 64
