--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
                 "optional": "c",
                 "string_view": "c",
                 "string": "c",
-                "system_error": "c"
+                "system_error": "c",
+                "estructura_hash.h": "c"
         }
 }
