--- a/tp2_escape_pokemon/makefile
+++ b/tp2_escape_pokemon/makefile
@@ -3,17 +3,17 @@ VALGRIND_FLAGS=--leak-check=full --track-origins=yes --show-reachable=yes --erro
 CFLAGS =-g -std=c99 -Wall -Wconversion -Wtype-limits -pedantic -Werror -O0
 CC = gcc
 
-all: clean valgreen-ejemplo, clean valgrind-ejemplo, clean valgreen-pruebas, clean valgrind-pruebas, clean valgreen-interactivo, clean valgrind-interactivo
+all: clean valgreen-escape_pokemon, clean valgrind-escape_pokemon, clean valgreen-pruebas, clean valgrind-pruebas, clean valgreen-interactivo, clean valgrind-interactivo
 
 
-ejemplo: ejemplo.c src/*
-	$(CC) $(CFLAGS) src/*.c ejemplo.c -o ejemplo 2>&1
+escape_pokemon: escape_pokemon.c src/*
+	$(CC) $(CFLAGS) src/*.c escape_pokemon.c -o escape_pokemon 2>&1
 
-valgreen-ejemplo: ejemplo
-	valgreen $(VALGREEN_FLAGS) ./ejemplo 2>&1
+valgreen-escape_pokemon: escape_pokemon
+	valgreen $(VALGREEN_FLAGS) ./escape_pokemon 2>&1
 
-valgrind-ejemplo: ejemplo
-	valgrind $(VALGRIND_FLAGS) ./ejemplo 2>&1
+valgrind-escape_pokemon: escape_pokemon
+	valgrind $(VALGRIND_FLAGS) ./escape_pokemon 2>&1
 
 valgreen-pruebas: pruebas
 	valgreen $(VALGREEN_FLAGS) ./pruebas 2>&1
@@ -34,4 +34,4 @@ interactivo: *.c *.h
 	$(CC) $(CFLAGS) src/abb.c src/nodo.c mostrar_abb.c interactivo.c -o interactivo 2>&1
 
 clean:
-	rm -f ejemplo *.o pruebas 2>&1 interactivo
+	rm -f escape_pokemon *.o pruebas 2>&1 interactivo
