Quitar includes innecesarios

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
                 "string_view": "c",
                 "string": "c",
                 "system_error": "c",
-                "estructura_hash.h": "c"
+                "estructura_hash.h": "c",
+                "validaciones.h": "c"
         }
 }
