Mejorar cargar_elementos para cambiar la cantidad de objetos en sala

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,12 @@
                 "string": "c",
                 "system_error": "c",
                 "estructura_hash.h": "c",
-                "validaciones.h": "c"
+                "estructura_sala.h": "c",
+                "hash.h": "c",
+                "objeto.h": "c",
+                "sala.h": "c",
+                "estructuras.h": "c",
+                "stdbool.h": "c",
+                "interaccion.h": "c"
         }
 }
