Revert "70 cambiar la implementacion para pasar de vector dinamico a otro tda"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,13 +6,6 @@
                 "string_view": "c",
                 "string": "c",
                 "system_error": "c",
-                "estructura_hash.h": "c",
-                "estructura_sala.h": "c",
-                "hash.h": "c",
-                "objeto.h": "c",
-                "sala.h": "c",
-                "estructuras.h": "c",
-                "stdbool.h": "c",
-                "interaccion.h": "c"
+                "estructura_hash.h": "c"
         }
 }
