Implementar el inicio de la interfaz

--- a/tp2_escape_pokemon/makefile
+++ b/tp2_escape_pokemon/makefile
@@ -10,7 +10,7 @@ escape_pokemon: escape_pokemon.c src/*
 	$(CC) $(CFLAGS) src/*.c escape_pokemon.c -o escape_pokemon 2>&1
 
 valgreen-escape_pokemon: escape_pokemon
-	valgreen $(VALGREEN_FLAGS) ./escape_pokemon 2>&1
+	valgreen $(VALGREEN_FLAGS) ./escape_pokemon ejemplo/objetos.txt ejemplo/interacciones.txt 2>&1
 
 valgrind-escape_pokemon: escape_pokemon
 	valgrind $(VALGRIND_FLAGS) ./escape_pokemon 2>&1
